# browser_tool

./: .env  GUIDE.md  README.md  pyproject.toml  requirements.txt  run_all_demos_sequential.py  sandbox_launcher.py
docker/: .dockerignore  Dockerfile  README.md  app.py  browser_api.py  browser_api_adapter.py  comprehensive_test.py  debug_test.py  docker-compose.yml  health_check.sh  novnc_proxy_check.sh  novnc_redirect.sh  requirements.txt  server.py  startup.sh  supervisord.conf  test_api_endpoints.py  test_typed_api.py  workspace_init.sh
docker/browser_api/: main.py
docker/browser_api/actions/: content.py  cookies.py  dialog.py  drag_drop.py  frame.py  human_intervention.py  interaction.py  navigation.py  network.py  scroll.py  tab_management.py
docker/browser_api/core/: browser_automation.py  dom_handler.py
docker/browser_api/models/: action_models.py  result_models.py
docker/browser_api/tests/: browser_adapter.py
docker/tests/: README.md  check_endpoints.py  comprehensive_endpoint_verification.py  comprehensive_system_test.py  comprehensive_system_test_v2.py  comprehensive_system_test_v3.py  run_tests.py
docker/workspace/: index.html  redirect.html
src/: test_browser_tools.py
src/examples/: EXAMPLES_INDEX.md
src/examples/advanced/: advanced_examples.py  enhanced_automation_demo.py  (+2 more)
src/tests/: verify_intervention_system.py
src/tools/: __init__.py  browser.py  enhanced_browser_tools.py  langchain_browser_tool.py
src/utils/: advanced_novnc_viewer.py  chat_history_manager.py  enhanced_agent_formatting.py  logger.py  novnc_viewer.py
(+43 files in other folders)
